--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -329,7 +329,6 @@
 						<div class="row justify-content-center">
 							<h4 class="text-center">Sofortladen Stromstärke</h4>
 						</div>
-
 						<div class="form-row form-group mb-1 vaRow regularTextSize" data-lp="1">
 							<label for="lp/1/current" class="col-3 col-form-label text-right"><span class="nameLp">LP1</span>:</label>
 							<div class="col">
@@ -338,6 +337,21 @@
 							</div>
 							<label for="lp/1/current" class="col-3 col-form-label valueLabel" suffix="A"></label>
 						</div>
+						<div class="row justify-content-center" data-lp="1">
+							<h4 class="text-center">Preisbasiertes Laden <span class="nameLp"></span></h4>
+						</div>
+						<div class="form-row vaRow form-group mt-1 justify-content-center" data-lp="1">
+							<div class="col btn-group btn-group-toggle" id="lp/1/etBasedCharging" data-toggle="buttons"
+								data-topicprefix="openWB/config/get/sofort/">
+								<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
+									<input type="radio" name="lp/1/etBasedCharging" data-option="0"> Aus
+								</label>
+								<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
+									<input type="radio" name="lp/1/etBasedCharging" data-option="1"> Ein
+								</label>
+							</div>
+						</div>
+
 						<div class="form-row form-group mb-1 vaRow regularTextSize" data-lp="2">
 							<label for="lp/2/current" class="col-3 col-form-label text-right"><span class="nameLp">LP2</span>:</label>
 							<div class="col">
@@ -345,6 +359,20 @@
 									value="6" data-initialized="0" data-topicprefix="openWB/config/get/sofort/">
 							</div>
 							<label for="lp/2/current" class="col-3 col-form-label valueLabel" suffix="A"></label>
+						</div>
+						<div class="row justify-content-center" data-lp="2">
+							<h4 class="text-center">Preisbasiertes Laden <span class="nameLp"></span></h4>
+						</div>
+						<div class="form-row vaRow form-group mt-1 justify-content-center" data-lp="2">
+							<div class="col btn-group btn-group-toggle" id="lp/2/etBasedCharging" data-toggle="buttons"
+								data-topicprefix="openWB/config/get/sofort/">
+								<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
+									<input type="radio" name="lp/2/etBasedCharging" data-option="0"> Aus
+								</label>
+								<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
+									<input type="radio" name="lp/2/etBasedCharging" data-option="1"> Ein
+								</label>
+							</div>
 						</div>
 						<div class="form-row form-group mb-1 vaRow regularTextSize" data-lp="3">
 							<label for="lp/3/current" class="col-3 col-form-label text-right"><span class="nameLp">LP3</span>:</label>
@@ -441,20 +469,6 @@
 								</div>
 								<input class="btn btn-sm btn-primary regularTextSize ml-2" type="button" id="lp/1/resetEnergyToCharge"
 									value="Reset" data-topicprefix="openWB/config/get/sofort/">
-							</div>
-							<div class="row justify-content-center">
-								<h4 class="text-center">Preisbasiertes Laden <span class="nameLp"></span></h4>
-							</div>
-							<div class="form-row vaRow form-group mt-1 justify-content-center" data-lp="1">
-								<div class="col btn-group btn-group-toggle" id="lp/1/etBasedCharging" data-toggle="buttons"
-									data-topicprefix="openWB/config/get/sofort/">
-									<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
-										<input type="radio" name="lp/1/etBasedCharging" data-option="0"> Aus
-									</label>
-									<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
-										<input type="radio" name="lp/1/etBasedCharging" data-option="1"> An
-									</label>
-								</div>
 							</div>
 						</div>
 
