--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -382,6 +382,20 @@
 							</div>
 							<label for="lp/3/current" class="col-3 col-form-label valueLabel" suffix="A"></label>
 						</div>
+						<div class="row justify-content-center" data-lp="3">
+							<h4 class="text-center">Preisbasiertes Laden <span class="nameLp"></span></h4>
+						</div>
+						<div class="form-row vaRow form-group mt-1 justify-content-center" data-lp="3">
+							<div class="col btn-group btn-group-toggle" id="lp/3/etBasedCharging" data-toggle="buttons"
+								data-topicprefix="openWB/config/get/sofort/">
+								<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
+									<input type="radio" name="lp/3/etBasedCharging" data-option="0"> Aus
+								</label>
+								<label class="btn btn-sm btn-outline-info btn-toggle regularTextSize">
+									<input type="radio" name="lp/3/etBasedCharging" data-option="1"> Ein
+								</label>
+							</div>
+						</div>
 						<div class="form-row form-group mb-1 vaRow regularTextSize" data-lp="4">
 							<label for="lp/4/current" class="col-3 col-form-label text-right"><span class="nameLp">LP4</span>:</label>
 							<div class="col">
